<resources>
    <string name="app_name">Tasty</string>
    <string name="login">Login</string>
    <string name="euname">Enter Username</string>
    <string name="epwd">Enter Password</string>
    <string name="signin">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="signup">signup</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="email">Email id</string>
    <string name="register">Registration</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="import_button">Import Button</string>
    <string name="gallery_button">Gallery Buttuon</string>
</resources>
