<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/fname"
            android:textSize="22dp"
            android:layout_marginRight="@dimen/margin10"
            android:layout_marginEnd="@dimen/margin10"/>

        <EditText
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lname"
            android:textSize="22dp"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginStart="@dimen/margin10"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textSize="22dp" />

</LinearLayout>